force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/HealthCloudGA__Clinical_Assessment_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Clinical Assessment Setting</label>
    <pluralLabel>Clinical Assessment Settings</pluralLabel>
</CustomObject>