force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__Assessment_Task_Queue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Assessment_Task_Queue__c</fullName>
    <label>Assessment Task Queue</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>