force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__Care_Program__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Care_Program__c</fullName>
    <label>Care Program</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>