force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__Consent_Auth_Data_Form_Use__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Consent_Auth_Data_Form_Use__c</fullName>
    <label>Consent Auth Data Form Use</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>