force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__Consent_Data_Use_Purpose__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Consent_Data_Use_Purpose__c</fullName>
    <label>Consent Data Use Purpose</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>