force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__MinorChildAgeLimit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MinorChildAgeLimit__c</fullName>
    <description>Age limit for minor child.</description>
    <label>Minor Child Age Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>