force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__Patient_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Patient_RecordType_Name__c</fullName>
    <defaultValue>&quot;ERM Patient&quot;</defaultValue>
    <label>Patient RecordType Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>