force-app/main/default/objects/HealthCloudGA__Clinical_Assessment_Setting__mdt/fields/HealthCloudGA__PrescribedQuarantineDays__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PrescribedQuarantineDays__c</fullName>
    <description>No of days to quarantine.</description>
    <label>Prescribed Quarantine Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>